--- a/efst/config/efst.conf
+++ b/efst/config/efst.conf
@@ -33,3 +33,13 @@
         blockMACBytes = n
         blockMACRandBytes = 0
         allowHoles = y
+    [[BoxcryptorCompatible]]
+        cipherAlg = 1
+        keySize = 256
+        blockSize = 4096
+        nameAlg = 4
+        chainedNameIV = n
+        uniqueIV = n
+        blockMACBytes = n
+        blockMACRandBytes = 0
+        allowHoles = y
