unmount on idle, default OS block size, fixes

--- a/efst/config/efst.conf
+++ b/efst/config/efst.conf
@@ -16,8 +16,8 @@
 
 
 
-# Plaintext entries
-[PlainTextEntries]
+# Reversed Ciphertext entries
+[ReversedCipherTextEntries]
 
 
 
@@ -27,16 +27,6 @@
         cipherAlg = 1
         keySize = 256
         blockSize = 1024
-        nameAlg = 4
-        chainedNameIV = n
-        uniqueIV = y
-        blockMACBytes = n
-        blockMACRandBytes = 0
-        allowHoles = y
-    [[BoxcryptorCompatible]]
-        cipherAlg = 1
-        keySize = 256
-        blockSize = 4096
         nameAlg = 4
         chainedNameIV = n
         uniqueIV = n
