efsc tests / fixes

--- a/efst/config/efst.conf
+++ b/efst/config/efst.conf
@@ -11,7 +11,7 @@
 ## GNU General Public License for more details.
 
 
-# Cipher entries
+# Ciphertext entries
 [CipherTextEntries]
 
 
@@ -21,7 +21,7 @@
 
 
 
-# EncFS config entries
+# EFST config entries
 [EncFSConfigEntries]
     [[EFSTConfigDefault]]
         cipherAlg = 1
